apps/base/test-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - port: 8080
      targetPort: 8080
